test/testBadTypeAnnotation.slq
def main(){
	x:=0:int[n]; // error
}
